Extracting useful components pt 3